--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,4 @@
+
 @font-face {
     font-family: Raleway;
     src: url(../fonts/Raleway-VariableFont_wght.ttf);
@@ -5,34 +6,37 @@
 
 @font-face {
     font-family: Manrope;
-    src: url(../fonts/Manrope-VariableFont_wght.ttf);
+    src: url(../fonts/Manrope-VariableFont_wght.ttf) format("truetype"),
+        url(../fonts/Manrope-VariableFont_wght.ttf) format("truetype-variations");
+    font-weight: 100 1000;
 }
 
-/*
+
+
 body{
-    background-color: #150017;
-    background: linear-gradient(145deg, #2b172b 20%,  black 110%);
     min-height: 100dvh;
-    color:#d3cae3;
     font-family: Manrope,sans-serif;
 }
 
 #name{
     font-size:x-large;
-    color: #84ff00;
-    text-shadow: 0 0 3px #84ff00;
     transition-duration: .1s;
     text-decoration: none;
+    font-family: Manrope;
+    cursor:pointer;
 }
+
 
 #name:hover{
     font-size:xx-large;
     transition-duration: .3s;
 }
 
+img{
+    max-width:100%;
+}
+
 header{
-    background-color: #150017;
-    background:linear-gradient(240deg, #84ff00 -40%, #FF0054 140%);
     position:sticky;
     top:0;
     z-index:1;
@@ -41,27 +45,38 @@ header{
 
 #divider{
     padding:3px 0px;
-    background-color: #FF0054;
-    box-shadow: 0 0 25px 1px #FF0054;
 }
 
 h1,h2{
-    color:#FF0054;
-    text-shadow: 0 0 3px #FF0054;
     font-family:Raleway,sans-serif;
 }
 
-#menu>a{
-    color:#FF0054;
-    margin:0 1.5rem 0 0;
+.actionLink{
+    margin:0 1rem 0 0;
+    padding:.5rem;
     transition-duration: .1s;
-    text-shadow: 0 0 3px #FF0054;
+    cursor:pointer;
 }
 
-#menu>a:hover,#menu>a.selected{
-    text-shadow: 0 0 15px white; 
-    color:#ffa2c1;
+.actionLink:hover{
     font-size:larger;
     transition-duration: .3s;
-} 
-*/
+}
+
+.custom-button{
+    border:none;
+    border-radius:.25rem;
+    transition-duration: .1s;
+}
+
+.custom-button:hover{
+    transition-duration: .3s;
+}
+
+.page{
+    display:none;
+}
+
+.page.active-page{
+    display:flex;
+}
