--- a/static/css/daytime.css
+++ b/static/css/daytime.css
@@ -8,15 +8,9 @@
 
 body{
     color:var(--text);
-    background-image:url("../images/bg-2.jpg");
+    background:linear-gradient(0deg,#0005,#0005),url("../images/bg-2.jpg");
     background-size: cover;
     text-shadow: 2px 2px 5px #0004;
-}
-
-main{
-    /* background-color: var(--bgcolor); */
-    /* background: linear-gradient(90deg, var(--purple) 20%,  black 150%); */
-    backdrop-filter: brightness(65%);
 }
 
 a{
@@ -31,7 +25,7 @@ a:hover,a:active{
 
 #name{
     color:var(--accent);
-    font-weight: 500;
+    font-weight: 600;
     border-radius: .25rem;
     padding:.5rem;
 }
@@ -42,7 +36,7 @@ a:hover,a:active{
 }
 
 img{
-    box-shadow: .25rem .25rem .5rem #00000033;
+    box-shadow: .25rem .25rem .5rem #0003;
     border-radius: 1rem;
 }
 
@@ -59,7 +53,7 @@ h1,h2{
 }
 
 #divider{
-    box-shadow: inset 0 0 .25rem #00000066;
+    box-shadow: inset 0 0 .25rem #0006;
 }
 
 .custom-button,a.custom-button{
@@ -74,13 +68,15 @@ h1,h2{
     color:var(--text);
 }
 
-header{
-    background:var(--bgcolor);
+header,footer{
+    /* background:linear-gradient(90deg, #023A -10%, #000A ); */
+    backdrop-filter: blur(15px);
+    z-index:3;
 }
 
-footer{
-    background:var(--bgcolor);
-}
+/* main{
+    filter:blur(10px)
+} */
 
 .text-container{
     background-color: #0004;
