red to orange pt-2

--- a/static/css/daytime.css
+++ b/static/css/daytime.css
@@ -1,7 +1,7 @@
 :root{
     --bgcolor:#00213b;
-    --accent:#c76305;
-    --accentTransparent:#c7630533;
+    --accent:#fb8525;
+    --accentTransparent:#fb852533;
     --text:#d3cae3;
 }
 
