--- a/static/css/daytime.css
+++ b/static/css/daytime.css
@@ -66,7 +66,7 @@ h1,h2{
 .custom-button:hover{
     box-shadow:0 0 0 .5rem var(--accentTransparent);
     background-color: var(--accent);
-    color:var(--text);
+    /* color:var(--text); */
 }
 
 header,footer{
@@ -85,3 +85,14 @@ header,footer{
     border-radius: 1rem;
 
 } */
+
+.collapsible{
+    max-height: 0;
+    overflow: hidden;
+    display: none;
+}
+
+.collapsible.expanded{
+    max-height: 1000px;
+    display: flex;
+}
