project links up and running

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,12 @@
 
+:root{
+    --darktext:#023;
+    --darktextlow:#023b;
+    --accent:#fb8525;
+    --accentTransparent:#fb852533;
+    --text:#e0d4f6;
+}
+
 @font-face {
     font-family: Raleway;
     src: url(../fonts/Raleway-VariableFont_wght.ttf);
@@ -14,25 +22,117 @@
 body{
     min-height: 100dvh;
     font-family: Manrope,sans-serif;
+    color:var(--text);
+    background: linear-gradient(44deg, #0238 38%, #0264 100%), url(../images/background-3.jpg);
+    /* background:#333; */
+    background-size: cover;
+    background-position: 50%;
+    background-attachment: fixed;
+    text-shadow: 1px 1px var(--darktextlow);
+}
+
+button{
+    background-color: unset;
+    border:unset;
+    color:unset;
+}
+
+a{
+    color:unset;
+    text-decoration: none;
+    border-radius: .25rem;
+}
+
+a:hover,a:active{
+    box-shadow: 0 0 0 5px var(--accentTransparent);
 }
 
 #name{
-    font-size:x-large;
+    font-size:1.5rem;
     transition-duration: .1s;
     text-decoration: none;
     font-family: Manrope;
     cursor:pointer;
+    color:var(--accent);
+    font-weight: 600;
+    border-radius: .25rem;
+    padding:.5rem;
 }
 
-
 #name:hover{
-    font-size:xx-large;
+    font-weight: 300;
+    background-color: var(--accentTransparent);
+    font-size:2.5rem;
     transition-duration: .3s;
 }
 
+
 img{
+    box-shadow: .1rem .1rem .2rem var(--darktextlow);
+    border-radius: 1rem;
     max-width:100%;
 }
+
+img#me-and-roxie{
+    max-height: 400px;
+}
+
+.actionLink{
+    padding:.5rem;
+    transition-duration: .1s;
+    cursor:pointer;    
+    border-radius: .5rem;
+}
+
+.actionLink:hover{
+    font-size:larger;
+    transition-duration: .3s;    
+    background-color: #FFF3;
+}
+
+
+h1,h2,#name{
+    font-family:Raleway,sans-serif;
+}
+
+h1,#name{
+    color:var(--accent);
+}
+
+
+#divider{
+    box-shadow: inset 0 0 .25rem #0006;
+    padding:3px 0px;
+}
+
+
+.custom-button,a.custom-button{
+    background-color: var(--text);
+    box-shadow:0 0 0 0 var(--accentTransparent);
+    color:var(--darktext);
+}
+
+.custom-button:hover{
+    box-shadow:0 0 0 .5rem var(--accentTransparent);
+    background-color: var(--accent);
+    /* color:var(--text); */
+}
+
+header,footer{
+    backdrop-filter: brightness(60%) blur(3px);
+    z-index:3;
+}
+
+.collapsible{
+    overflow: hidden;
+    display: none;
+}
+
+.collapsible.expanded{
+    display: flex;
+}
+
+
 
 header{
     position:sticky;
@@ -41,24 +141,6 @@ header{
     font-family:Raleway,sans-serif;
 }
 
-#divider{
-    padding:3px 0px;
-}
-
-h1,h2{
-    font-family:Raleway,sans-serif;
-}
-
-.actionLink{
-    padding:.5rem;
-    transition-duration: .1s;
-    cursor:pointer;
-}
-
-.actionLink:hover{
-    font-size:larger;
-    transition-duration: .3s;
-}
 
 .custom-button{
     border:none;
@@ -78,3 +160,62 @@ h1,h2{
     display:flex;
 }
 
+.image-description{
+    position:relative;
+    margin-top:.5rem;
+}
+
+.image-description>p{
+    position:absolute;
+    background-color: var(--darktextlow);
+    height:100%;
+    opacity: 0;
+    overflow-y: 0;
+    overflow: hidden;
+    transition: .4s ease-out;
+    width: 100%;
+    bottom:0;
+    margin:0;
+    padding:1rem;
+    border-radius: 1rem;
+}
+
+.image-description:hover>p{
+    opacity: 1;
+}
+
+.tag-container{
+    display: flex;
+    row-gap: .25rem;
+    column-gap: .25rem;
+    margin-top:.5rem;
+    flex-wrap: wrap;
+    list-style: none;
+    padding:0;
+}
+
+.tag-container>li{
+    background-color: var(--text);
+    color:var(--darktext);
+    text-shadow: none;
+    padding:0 1rem;
+}
+
+.projectLink{
+    box-shadow: 0 0 0 0 var(--accentTransparent);
+    transition: .4s ease-out;
+    padding:.5rem;
+}
+
+a.projectLink:hover{
+    box-shadow: 0 0 0 0 var(--accentTransparent);
+}
+
+.project-title>img{
+    height:2rem;
+    width:2rem;
+    box-shadow: none;
+}
+.project-title>h2{
+    margin:0;
+}
