--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,19 +32,13 @@ body{
 
 .background{
     position:fixed;
-    height:100%;
+    /* height:100%; */
     z-index:-1;
     background: linear-gradient(44deg, #0129 38%, #0129 100%), url(../images/background-3.jpg);
-    background-size: auto 100lvh;
+    background-size: cover;
     background-position: 50%;
     background-attachment: fixed;
     width:100%;
-}
-
-@media (min-aspect-ratio:4/3){
-    .background{
-        background-size: cover;
-    }
 }
 
 
@@ -115,7 +109,7 @@ h1,h2,#name{
 
 h1,#name{
     color:var(--accent);
-    color:red;
+    color:lightseagreen;
 }
 
 
